# xrdesk

./: .gitignore  CMakeLists.txt  README.md  build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  graphicsplugin_vulkan.cpp
src/: CMakeLists.txt  logger.cpp
